--- a/package.json
+++ b/package.json
@@ -24,5 +24,17 @@
     "morgan": "^1.1.1",
     "serve-favicon": "^2.0.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gulp": "^4.0.0",
+    "gulp-if": "^2.0.2",
+    "gulp-jscs": "^4.1.0",
+    "gulp-jshint": "^1.9.0",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-print": "^5.0.0",
+    "gulp-rev": "^9.0.0",
+    "gulp-rev-all": "^1.0.0",
+    "gulp-util": "^3.0.8",
+    "jshint-stylish": "^2.2.1",
+    "yargs": "^13.2.1"
+  }
 }
